--- a/app/src/main/res/layout/item_lessons_view.xml
+++ b/app/src/main/res/layout/item_lessons_view.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="180dp"
-    android:layout_height="180dp"
-    android:background="@color/black"
-    android:layout_marginHorizontal="6dp"
-    android:layout_marginVertical="8dp"
-    app:cardCornerRadius="8dp">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="vm"
+            type="com.example.image_drawer.utils.SingleLessonItemVM" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:background="@color/black"
+        android:layout_marginHorizontal="6dp"
+        android:layout_marginVertical="8dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="5dp"
+        app:cardCornerRadius="8dp">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/test_pic"/>
+        android:src="@{vm.url}"/>
 
-</androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text = "@{vm.title}"
+            android:hint="2134123321"
+            android:layout_gravity="center_horizontal|bottom"
+            android:textColor="@color/orange"
+            android:fontFamily="@font/montserrat_semibold_600"
+            android:layout_marginBottom="10dp"/>
+
+    </androidx.cardview.widget.CardView>
+</layout>
 
 
 
