--- a/app/src/main/res/layout/item_lessons_view.xml
+++ b/app/src/main/res/layout/item_lessons_view.xml
@@ -11,32 +11,45 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="190dp"
-        android:layout_height="190dp"
-        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_marginHorizontal="6dp"
         android:layout_marginVertical="8dp"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="8dp">
+        android:background="@color/black"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="1dp"
+        app:cardUseCompatPadding="true">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@{vm.url}"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:background="@color/black"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:loadImage="@{vm.url}" />
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text = "@{vm.title}"
-            android:hint="2134123321"
-            android:layout_gravity="center_horizontal|bottom"
-            android:textColor="@color/orange"
-            android:fontFamily="@font/montserrat_semibold_600"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="16dp"
+            android:background="@color/background_main"
+            android:layout_gravity="center_horizontal|bottom">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="1dp"
+                android:fontFamily="@font/montserrat_semibold_600"
+                android:text="@{vm.title}"
+                android:textColor="@color/indigo"
+                tools:text="PictureName" />
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.cardview.widget.CardView>
+
 </layout>
 
 
