--- a/app/src/main/res/layout/item_lesson_view.xml
+++ b/app/src/main/res/layout/item_lesson_view.xml
@@ -11,20 +11,17 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="match_parent"
         android:background="@color/black"
-        android:layout_marginHorizontal="6dp"
-        android:layout_marginVertical="8dp"
         app:cardUseCompatPadding="true"
-        app:cardElevation="5dp"
+        app:cardElevation="1dp"
         app:cardCornerRadius="8dp">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@{vm.url}"/>
-
+            android:background="@color/black"
+            app:loadImage="@{vm.url}"/>
 
     </androidx.cardview.widget.CardView>
 
