--- a/app/src/main/res/layout/item_lessons_preview.xml
+++ b/app/src/main/res/layout/item_lessons_preview.xml
@@ -16,32 +16,33 @@
         android:layout_marginHorizontal="6dp"
         android:layout_marginVertical="8dp"
         android:background="@color/black"
+        android:onClick="@{v -> vm.onLessonClick.invoke(vm)}"
         app:cardCornerRadius="8dp"
         app:cardElevation="1dp"
         app:cardUseCompatPadding="true">
 
         <ImageView
             android:layout_width="match_parent"
-            android:background="@color/black"
             android:layout_height="match_parent"
+            android:background="@color/black"
             android:scaleType="centerCrop"
             app:loadImage="@{vm.url}" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
             android:layout_marginBottom="10dp"
-            app:cardCornerRadius="16dp"
             android:background="@color/background_main"
-            android:layout_gravity="center_horizontal|bottom">
+            app:cardCornerRadius="16dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginVertical="1dp"
                 android:fontFamily="@font/montserrat_semibold_600"
+                android:gravity="center"
                 android:text="@{vm.title}"
                 android:textColor="@color/indigo"
                 tools:text="PictureName" />
