--- a/app/src/main/res/layout/fragment_enter.xml
+++ b/app/src/main/res/layout/fragment_enter.xml
@@ -46,6 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
